Bugzilla bug #86125: removed the support for MP_DIGIT_MAX < 256.  This #if preprocessor directive broke some C preprocessors that don't recognize LL constants even though the C compilers support long long.  r=nelsonb.